[gd_scene load_steps=12 format=2]

[ext_resource path="res://juego/interface/ROBOTECH GP.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/menu/NuevoMenuInicio.gd" type="Script" id=2]
[ext_resource path="res://juego/menu/botones/BotonSalir.gd" type="Script" id=3]
[ext_resource path="res://juego/SFX/BotonnSFX.wav" type="AudioStream" id=4]
[ext_resource path="res://juego/menu/botones/BotonMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/SFX/BotonHover.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=7]
size = 78
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 62
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.627451, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.407843, 0.392157, 0.392157, 1 )

[node name="NuevoMenuInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
menu_ajustes = "res://juego/menu/MenuAjustes.tscn"
nivel_inicial = "res://juego/Niveles/NivelTest.tscn"
pantalla_carga = "res://juego/menu/PantallaCarga.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.992157, 0.972549, 0.972549, 1 )
anchor_left = 0.52
anchor_top = 0.19
anchor_right = 0.52
anchor_bottom = 0.19
margin_left = -247.2
margin_top = -45.6
margin_right = 246.8
margin_bottom = 45.4

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.234
anchor_right = 0.5
anchor_bottom = 0.28
margin_left = -150.0
margin_top = -35.5
margin_right = 150.0
margin_bottom = 55.5
custom_colors/font_color = Color( 0.67451, 0.345098, 0.823529, 1 )
custom_fonts/font = SubResource( 7 )
text = "GODOTECH"
align = 1
valign = 1

[node name="ContenedorPrincipal" type="VBoxContainer" parent="."]
anchor_left = 0.529
anchor_top = 0.63
anchor_right = 0.529
anchor_bottom = 0.63
margin_left = -145.84
margin_top = -158.2
margin_right = 146.16
margin_bottom = 158.8

[node name="BotonCargar" parent="ContenedorPrincipal" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 292.0
margin_bottom = 74.0
text = "Cargar"

[node name="BotonNuevo" parent="ContenedorPrincipal" instance=ExtResource( 5 )]
margin_top = 78.0
margin_right = 292.0
margin_bottom = 152.0
text = "NUEVO"

[node name="Ajustes" parent="ContenedorPrincipal" instance=ExtResource( 5 )]
margin_top = 156.0
margin_right = 292.0
margin_bottom = 230.0
text = "AJUSTES"

[node name="HSeparator" type="HSeparator" parent="ContenedorPrincipal"]
modulate = Color( 0.792157, 0.780392, 0.780392, 1 )
margin_top = 234.0
margin_right = 292.0
margin_bottom = 238.0

[node name="BotonSalir" type="Button" parent="ContenedorPrincipal"]
margin_top = 242.0
margin_right = 292.0
margin_bottom = 317.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "salir"
script = ExtResource( 3 )

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="BotonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0
bus = "SFX"

[connection signal="pressed" from="ContenedorPrincipal/BotonCargar" to="." method="_on_BotonCargar_pressed"]
[connection signal="mouse_entered" from="ContenedorPrincipal/BotonNuevo" to="." method="_on_BotonNuevo_mouse_entered"]
[connection signal="pressed" from="ContenedorPrincipal/BotonNuevo" to="." method="_on_BotonNuevo_pressed"]
[connection signal="mouse_entered" from="ContenedorPrincipal/Ajustes" to="." method="_on_Ajustes_mouse_entered"]
[connection signal="pressed" from="ContenedorPrincipal/Ajustes" to="." method="_on_Ajustes_pressed"]
[connection signal="mouse_entered" from="ContenedorPrincipal/BotonSalir" to="." method="_on_BotonSalir_mouse_entered"]
[connection signal="pressed" from="ContenedorPrincipal/BotonSalir" to="." method="_on_BotonSalir_pressed"]
